--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@syncfusion/ej2-base": "^20.4.51",
-    "@syncfusion/ej2-react-popups": "^20.4.53",
+    "@tippyjs/react": "^4.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
