--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.2",
+    "recharts": "^2.5.0",
     "regenerator-runtime": "^0.13.11"
   },
   "devDependencies": {
